--- a/rag/text_to_sql.ipynb
+++ b/rag/text_to_sql.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gabriel/Documents/repos/py-dspy-experiments/rag/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,6 +26,9 @@
     "import uuid\n",
     "import pandas as pd\n",
     "import sqlite3\n",
+    "import altair as alt\n",
+    "import json\n",
+    "\n",
     "\n",
     "load_dotenv(\"../.env\")"
    ]
@@ -179,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -276,14 +271,183 @@
        "9             Eric Clapton       39.60"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "conn = sqlite3.connect(\"./data/Chinook.db\")\n",
-    "pd.read_sql(answer.sql, conn)"
+    "df = pd.read_sql(answer.sql, conn)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe_schema = df.dtypes.to_markdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataframeSchemaToVegaLiteSpec(dspy.Signature):\n",
+    "    \"\"\"Convert pandas dataframe schema to vega-lite spec.\"\"\"\n",
+    "\n",
+    "    question: str = dspy.InputField()\n",
+    "    context: str = dspy.InputField()\n",
+    "    vega_lite_spec: str = dspy.OutputField(\n",
+    "        desc=\"json string, no code fences or premeable, don 't include data attribute\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataframeSchemaToVegaSpec(dspy.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.generate_vega_lite_spec = dspy.ChainOfThought(\n",
+    "            DataframeSchemaToVegaLiteSpec\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, question, context):\n",
+    "        prediction = self.generate_vega_lite_spec(\n",
+    "            context=context, question=question\n",
+    "        )\n",
+    "        return dspy.Prediction(\n",
+    "            context=context, vega_lite_spec=prediction.vega_lite_spec\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"mark\": \"bar\",\n",
+      "  \"encoding\": {\n",
+      "    \"x\": {\"field\": \"Name\", \"type\": \"nominal\"},\n",
+      "    \"y\": {\"field\": \"TotalSales\", \"type\": \"quantitative\"}\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with dspy.context(lm=turbo, rm=rm):\n",
+    "    my_question = \"Who are the top 10 selling artists and how much did each of them sold?\"\n",
+    "    answer = DataframeSchemaToVegaSpec().forward(\n",
+    "        question=my_question, context=dataframe_schema\n",
+    "    )\n",
+    "    print(answer.vega_lite_spec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "  #altair-viz-e18705ec8c7445be86f58ce692f61122.vega-embed {\n",
+       "    width: 100%;\n",
+       "    display: flex;\n",
+       "  }\n",
+       "\n",
+       "  #altair-viz-e18705ec8c7445be86f58ce692f61122.vega-embed details,\n",
+       "  #altair-viz-e18705ec8c7445be86f58ce692f61122.vega-embed details summary {\n",
+       "    position: relative;\n",
+       "  }\n",
+       "</style>\n",
+       "<div id=\"altair-viz-e18705ec8c7445be86f58ce692f61122\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-e18705ec8c7445be86f58ce692f61122\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e18705ec8c7445be86f58ce692f61122\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm/vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@5.17.0?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm/vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else {\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"5.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-582dea0b6c14c490570ce62214dff8a5\"}, \"mark\": \"bar\", \"encoding\": {\"x\": {\"field\": \"Name\", \"type\": \"nominal\"}, \"y\": {\"field\": \"TotalSales\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.17.0.json\", \"datasets\": {\"data-582dea0b6c14c490570ce62214dff8a5\": [{\"Name\": \"Iron Maiden\", \"TotalSales\": 138.5999999999998}, {\"Name\": \"U2\", \"TotalSales\": 105.92999999999982}, {\"Name\": \"Metallica\", \"TotalSales\": 90.0899999999999}, {\"Name\": \"Led Zeppelin\", \"TotalSales\": 86.12999999999992}, {\"Name\": \"Lost\", \"TotalSales\": 81.58999999999997}, {\"Name\": \"The Office\", \"TotalSales\": 49.75000000000001}, {\"Name\": \"Os Paralamas Do Sucesso\", \"TotalSales\": 44.550000000000004}, {\"Name\": \"Deep Purple\", \"TotalSales\": 43.56}, {\"Name\": \"Faith No More\", \"TotalSales\": 41.58}, {\"Name\": \"Eric Clapton\", \"TotalSales\": 39.599999999999994}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vega_json = {\n",
+    "    **{\"data\": {\"values\": df.to_dict(orient=\"records\")}},\n",
+    "    **json.loads(answer.vega_lite_spec),\n",
+    "}\n",
+    "alt.Chart.from_dict(vega_json)"
    ]
   }
  ],
